# inference

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  build.rs  docker-compose.yaml
.cargo/: config.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: issue.md
config/grafana/: triton.json
config/loki/: loki-config.yaml
config/model-uploader/: README.md
config/prometheus/: prometheus.yml
config/promtail/: promtail-config.yaml
src/: error.rs  inference.rs  lib.rs  model.rs  registry.rs  server.rs  system.rs  tests.rs
